# teaser

./: .gitlab-ci.yml  LICENSE  README.md  VISUALIZATION_TODO.md  voice-agent-roadmap.md
voice-agent/: .gitignore  Architecture.MD  README.md  ROADMAP.md  TODO.md  docker-compose.yml  reset.sh  setup.sh  start.sh  stop.sh
voice-agent/Export CSS/: README.md  globals.css  theme-provider.tsx
voice-agent/backend/: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
voice-agent/backend/app/: main.py
voice-agent/backend/app/database/: models.py
voice-agent/backend/app/llm/: bedrock_service.py  ollama_service.py
voice-agent/backend/app/routers/: __init__.py  manager.py  visualization.py  worker.py
voice-agent/backend/app/services/: __init__.py  factory.py  qa_service.py  summarization.py
voice-agent/backend/app/storage/: __init__.py  aws_storage_service.py  local_storage_service.py
voice-agent/backend/app/stt/: transcribe_service.py  whisper_service.py
voice-agent/backend/app/tts/: piper_service.py  polly_service.py
voice-agent/backend/app/visualization/: __init__.py  audio_features.py  umap_projector.py  visualization_service.py
voice-agent/backend/app/websocket/: manager.py
voice-agent/frontend/: .gitignore  Dockerfile  package-lock.json  package.json
voice-agent/frontend/src/: App.css  App.js  index.css  themes.css
voice-agent/frontend/src/components/: AudioVisualizer.js  AudioVisualizer3D.js  ConversationHistory.js  ConversationHistory.tsx  ManagerDashboard.js  ParticleBackground.js  RoleSelector.js  ThemeSelector.js  VoiceInterface.js  (+3 more)
voice-agent/terraform/: .gitignore  README.md  api_gateway.tf  cloudfront.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
(+5 files in other folders)
